--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Сайт дед Мороза</title>
 </head>
@@ -18,14 +19,14 @@
             <nav class="nav">
                 <a href="#main" class="nav__item">Главная</a>
                 <a href="#compliment" class="nav__item">Поздравление</a>
-                <a href="#poem" class="nav__item">Стихи</a>
-                <a href="#msg" class="nav__item">Письмо для Деда Мороза</a>
+                <a href="#poem" class="nav__item">Стихи для деда Мороза</a>
+                <a href="#msg" class="nav__item">Письмо для деда Мороза</a>
             </nav>
         </header>
         <section class="section main" id="main">
             <div class="about">
                 <div class="about__avatar">
-                    <img src="img/dasanta.jpg" alt="Дед Мороз" class="about__img">
+                    <img src="img/photo-santa-background.jpg" alt="Дед Мороз" class="about__img">
                 </div>
                 <div class="about__info">
                     <h1 class="about__title">
@@ -65,7 +66,7 @@
             <ul class="poem__list">
                 <li class="poem__item">
                     <div class="poem__img-wrap">
-                        <img src="img/pngwing.com.png" alt="Ель" class="poem__img">
+                        <img src="img/xmas06.png" alt="Ель" class="poem__img">
                     </div>
                     <h3 class="poem__subtitle">На пушистой елке</h3>
                     <div class="poem__text">
@@ -115,29 +116,29 @@
             </ul>
         </section>
         <section class="msg section" id="msg">
-            <h2 class="msg__title">Письмо Деду Морозу</h2>
+            <h2 class="msg__title">Письмо деду Морозу</h2>
             <form action="" class="form-msg">
                 <div class="form-msg__content">
                     <div class="form-msg__row">
-                        <div class="form-msg__title-imput">Ведите имя</div>
+                        <div class="form-msg__title-input">Введите имя</div>
                         <input type="text" name="" id="" class="form-msg__input">
                     </div>
                     <div class="form-msg__row">
-                        <div class="form-msg__title-imput">Ведите адрес</div>
+                        <div class="form-msg__title-input">Введите адрес</div>
                         <input type="text" name="" id="" class="form-msg__input">
                     </div>
                     <div class="form-msg__row">
-                        <div class="form-msg__title-imput">Написать письмо деду Морозу</div>
-                        <textarea name="" id=" " class="form-msg__message"></textarea>
+                        <div class="form-msg__title-input">Написать письмо деду Морозу</div>
+                        <textarea name="" id="" class="form-msg__message"></textarea>
                     </div>
                     <div class="form-msg__button-wrap">
-                        <button class="form-msg__sumbit">Отправить письмо</button>
+                        <button type="submit" class="form-msg__submit">Отправить письмо</button>
                     </div>
                 </div>
                 <div class="form-msg__img-wrap">
                     <img src="img/logo-300x300.png" alt="Дед Мороз" class="form-msg__img">
                 </div>
-            </form>
+            </form>            
         </section>
     </div>
 </body>
